# vizier

./: .gitignore  .vimrc.sample  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Justfile  LICENSE  Readme.md  build.rs  cliff.toml  docker-compose.yml  init.lua  install.sh  lazy-lock.json  vizier.agent.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy-book.yml  docker-publish.yml  publish.yml  release-and-publish.yml  release.yml
dockerfile/ollama/: Dockerfile  entrypoint.sh
docs/src/: SUMMARY.md  introduction.md
docs/src/api-integration/: examples.md  rest-api.md
docs/src/configuration/: agents.md  channels.md  cli.md  configuration.md  index.md  main-config.md  providers.md  storage-shell.md  tools-embedding.md
docs/src/getting-started/: configuration.md  installation.md  quick-start.md
installer/windows/: installer.nsi
lua/config/: dashboard.lua  lazy.lua
lua/plugins/: blink.lua  bufferline.lua  codesettings.lua  colorschemes.lua  discord.lua  init.lua  lspsaga.lua  lueline.lua  markdown.lua  mason.lua  minimap.lua  misc.lua  neo-tree.lua  neorg.lua  nvim-tree.lua  obsidian.lua  opencode.lua  origami.lua  toggleterm.lua  treesitter.lua  trouble.lua  which-key.lua
migrations/: 001_setup.sql
src/: config.rs  constant.rs  dependencies.rs  error.rs  main.rs  transport.rs  vizier.rs
src/agent/: exec.rs  memory.rs  mod.rs  session.rs
src/agent/agent_impl/: mod.rs  provider.rs
src/agent/hook/: debug.rs
src/agent/tools/: memory_tools.rs  mod.rs
src/agents/: memory.rs  mod.rs  process.rs
src/agents/agent/: mod.rs
src/agents/hook/: debug.rs  history.rs  mod.rs  thinking.rs  tool_calls.rs
src/agents/skill/: mod.rs
src/agents/tools/: mod.rs
src/channels/: discord.rs  mod.rs
src/channels/api/: mod.rs  response.rs
src/channels/discord/: mod.rs
src/cli/: agent.rs  init.rs  mod.rs  onboard.rs  run.rs
src/config/: agent.rs  embedding.rs  mod.rs  provider.rs  shell.rs  user.rs
src/database/: history.rs  memory.rs  mod.rs  task.rs
src/embedding/: fastembed.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
src/mcp/: mod.rs
src/scheduler/: mod.rs
src/schema/: mod.rs  request.rs  response.rs
src/shell/: mod.rs
src/storage/: history.rs  mod.rs  shared_document.rs  skill.rs  task.rs  user.rs
src/utils/: discord.rs  markdown.rs  mod.rs  ollama.rs  python.rs  telegram.rs
src/vizier/: mod.rs  onboard.rs  run.rs
templates/: .vizier.template.toml  AGENT.MD  AGENT.md  BOOT.MD  BOOT.md  CONTEXT.md  IDENT.MD  IDENT.md  IDENTITY.md  agent.template.md
webui/: .gitignore  README.md  package-lock.json  package.json
webui/app/: animation.css  app.css  layout.tsx  root.tsx  routes.ts
(+111 files in other folders)
