[package]
name = "vizier"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.57", features = ["derive"] }
config = "0.15.19"
dirs = "6.0.0"
flume = "0.12.0"
form_urlencoded = "1.2.2"
futures = "0.3.31"
iocraft = "0.7.17"
log = "0.4.29"
mongodb = "3.5.1"
pretty_env_logger = "0.5.0"
regex = "1.12.3"
reqwest = "0.13.2"
rig-core = { version = "0.30.0", features = ["derive"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
serenity = "0.12.5"
text-splitter = { version = "0.29.3", features = ["markdown"] }
tokio = { version = "1.49.0", features = [
  "rt-multi-thread",
  "macros",
  "signal",
] }
